✨ Neue Funktionen (Features) Erweiterter Octant (Rangefinder):
Neue Formen: Es wurden neue Auswahlformen hinzugefügt, darunter Zylinder, Kugel, Pyramide und Dreieck (Prisma).

Form wechseln: Du kannst nun mit Shift + Alt + Mausrad durch die verschiedenen Formen zirkulieren.

Positionierung: Neue Funktion zum Verschieben der Auswahl in Blickrichtung durch Drücken von Sneak + Shift + Mausrad.

Werkzeug-Upgrades:

Meißel (Chisel) & Spachtel (Spatula): Beide Werkzeuge unterstützen nun Treppen (Stairs) und Stufen (Slabs).

Kombinierte Funktionalität: Der Meißel kann nun die Funktion des Spachtels übernehmen, wenn er in der Offhand gehalten wird und man schleicht.

Doppelsprung: Eine Option zum Aktivieren/Deaktivieren des Doppelsprungs wurde hinzugefügt (Code-seitig/Config).

⚖️ Balancing & Anpassungen
Haltbarkeit: Die Haltbarkeit des Meißels (Chisel) wurde erhöht.

Seltenheit: Der Building Core wurde seltener gemacht, da er zuvor zu häufig in Kisten zu finden war.

Reparatur: Die Reparaturkosten für den Vorschlaghammer (Sledgehammer) wurden angepasst/festgelegt.

🐛 Bugfixes
Verzauberungen: Ein Problem wurde behoben, durch das Federfall und Schutz nicht gleichzeitig auf Stiefeln angewendet werden konnten (Konflikt gelöst).

--- a/src/main/resources/assets/simplebuilding/lang/de_de.json
+++ b/src/main/resources/assets/simplebuilding/lang/de_de.json
@@ -172,8 +172,8 @@
   "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions": "Bündel-Interaktionen umkehren",
   "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions.@Tooltip": "Wenn wahr, führt Schleichen bei der Verwendung von Bündeln die gegenteilige Aktion aus (Einlegen vs. Entnehmen).",
 
-  "text.autoconfig.simplebuilding.option.disableDoubleJump": "Doppelsprung deaktivieren",
-  "text.autoconfig.simplebuilding.option.tools.disableDoubleJump.@Tooltip": "Wenn wahr, wird die Luftsprung-Verzauberung deaktiviert.",
+  "text.autoconfig.simplebuilding.option.enableDoubleJump": "Doppelsprung aktiviert",
+  "text.autoconfig.simplebuilding.option.tools.enableDoubleJump.@Tooltip": "Ermöglicht dem Spieler, einen zusätzlichen Sprung auszuführen, wenn diese Option aktiviert ist.",
 
   "block.simplebuilding.reinforced_chest": "Verstärkte Truhe",
   "item.simplebuilding.reinforced_chest": "Verstärkte Truhe",
