Compass in smithingtable to locate structures

--- a/src/main/resources/assets/simplebuilding/lang/en_us.json
+++ b/src/main/resources/assets/simplebuilding/lang/en_us.json
@@ -88,40 +88,34 @@
   "enchantment.simplebuilding.deep_pockets": "Deep Pockets",
   "enchantment.simplebuilding.deep_pockets.description": "Increases the capacity of bundles.",
   "enchantment.simplebuilding.master_builder": "Master Builder",
-    "enchantment.simplebuilding.master_builder.description": "Increases the area of effect for building wands.",
+    "enchantment.simplebuilding.master_builder.description": "Places blocks directly from your bundle.",
   "enchantment.simplebuilding.funnel": "Funnel",
-    "enchantment.simplebuilding.funnel.description": "Automatically fills building wands from your inventory.",
-  "enchantment.simplebuilding.quiver": "Quiver",
-    "enchantment.simplebuilding.quiver.description": "Increases the capacity of quivers.",
+    "enchantment.simplebuilding.funnel.description": "Automatically funnels items into your bundle.",
   "enchantment.simplebuilding.override": "Override",
-    "enchantment.simplebuilding.override.description": "Allows placement of blocks that normally cannot be placed.",
+    "enchantment.simplebuilding.override.description": "Allows mining of blocks which are normally not supported by the sledgehammer.",
   "enchantment.simplebuilding.radius": "Radius",
     "enchantment.simplebuilding.radius.description": "Increases the area of effect for sledgehammers.",
   "enchantment.simplebuilding.strip_miner": "Strip Miner",
-    "enchantment.simplebuilding.strip_miner.description": "Mines a 3x3 area when sneaking.",
+    "enchantment.simplebuilding.strip_miner.description": "Mines a tunnel when sneaking.",
   "enchantment.simplebuilding.vein_miner": "Vein Miner",
-    "enchantment.simplebuilding.vein_miner.description": "Mines all connected blocks of the same type when sneaking.",
+    "enchantment.simplebuilding.vein_miner.description": "Mines all connected ores of the same type when sneaking.",
   "enchantment.simplebuilding.kinetic_protection": "Kinetic Protection",
-    "enchantment.simplebuilding.kinetic_protection.description": "Reduces fall damage when wearing enchanted armor.",
+    "enchantment.simplebuilding.kinetic_protection.description": "Reduces kinetic damage.",
   "enchantment.simplebuilding.cover": "Cover",
-    "enchantment.simplebuilding.cover.description": "Automatically fills chiseled blocks when placing them.",
+    "enchantment.simplebuilding.cover.description": "Places a blocks on the surface you're looking",
   "enchantment.simplebuilding.bridge": "Bridge",
-    "enchantment.simplebuilding.bridge.description": "Places blocks beneath the player when sneaking.",
+    "enchantment.simplebuilding.bridge.description": "Places blocks infront of you.",
   "enchantment.simplebuilding.linear": "Linear",
     "enchantment.simplebuilding.linear.description": "Places blocks in a straight line when sneaking.",
-  "enchantment.simplebuilding.tailwind": "Tailwind",
-  "enchantment.simplebuilding.tailwind.description": "Increases the speed of ridden mobs.",
-  "enchantment.simplebuilding.leaping": "Leaping",
-  "enchantment.simplebuilding.leaping.description": "Increases the jump height of ridden horses.",
   "enchantment.simplebuilding.drawer": "Drawer",
-  "enchantment.simplebuilding.drawer.description": "Increases the storage capacity of chests and bundles.",
+  "enchantment.simplebuilding.drawer.description": "Increases the storage capacity of chests and bundles, but locks to the specific item.",
   "enchantment.simplebuilding.versatility": "Versatility",
   "enchantment.simplebuilding.versatility.description": "When sneaking, switches to best tool for the job.",
 
   "enchantment.simplebuilding.break_through": "Break Through",
-    "enchantment.simplebuilding.break_through.description": "Allows the sledgehammer to break blocks that are normally unbreakable.",
+    "enchantment.simplebuilding.break_through.description": "Allows the sledgehammer to break a second layer of blocks.",
   "enchantment.simplebuilding.color_palette": "Color Palette",
-    "enchantment.simplebuilding.color_palette.description": "Allows the chisel to transform more block types based on dye color.",
+    "enchantment.simplebuilding.color_palette.description": "Randomizes blockplacement.",
   "enchantment.simplebuilding.double_jump": "Air Jump",
   "enchantment.simplebuilding.double_jump.description": "Allows the player to perform an additional jump.",
 
