--- a/src/main/resources/assets/simplebuilding/lang/de_de.json
+++ b/src/main/resources/assets/simplebuilding/lang/de_de.json
@@ -6,8 +6,8 @@
   "item.simplebuilding.diamond_chisel": "Diamantmeißel",
   "item.simplebuilding.netherite_chisel": "Netheritmeißel",
 
-  "tooltip.simplebuilding.chisel": "Benutzen, um Blöcke zu formen.",
-  "tooltip.simplebuilding.chisel.shift_down": "Rechtsklick auf einen veränderbaren Block.",
+  "tooltip.simplebuilding.chisel": "Wird verwendet, um Blöcke zu formen.",
+  "tooltip.simplebuilding.chisel.shift_down": "Rechtsklick auf einen formbaren Block. Schleichen zum Umkehren.",
 
   "item.simplebuilding.stone_spatula": "Steinspachtel",
   "item.simplebuilding.copper_spatula": "Kupferspachtel",
@@ -16,8 +16,8 @@
   "item.simplebuilding.diamond_spatula": "Diamantspachtel",
   "item.simplebuilding.netherite_spatula": "Netheritspachtel",
 
-  "tooltip.simplebuilding.spatula": "Benutzen, um Blöcke zu glätten.",
-  "tooltip.simplebuilding.spatula.shift_down": "Rechtsklick auf einen veränderbaren Block.",
+  "tooltip.simplebuilding.spatula": "Wird verwendet, um Blöcke zu glätten.",
+  "tooltip.simplebuilding.spatula.shift_down": "Rechtsklick auf einen formbaren Block.",
 
   "item.simplebuilding.copper_core": "Kupferkern",
   "item.simplebuilding.iron_core": "Eisenkern",
@@ -25,12 +25,12 @@
   "item.simplebuilding.diamond_core": "Diamantkern",
   "item.simplebuilding.netherite_core": "Netheritkern",
 
-  "item.simplebuilding.copper_building_wand": "Kupferbaustab",
-  "item.simplebuilding.iron_building_wand": "Eisenbaustab",
-  "item.simplebuilding.gold_building_wand": "Goldbaustab",
-  "item.simplebuilding.diamond_building_wand": "Diamantbaustab",
-  "item.simplebuilding.netherite_building_wand": "Netheritbaustab",
-  "tooltip.simplebuilding.building_wand.size": "Platziert eine Fläche von %s x %s Blöcken.",
+  "item.simplebuilding.copper_building_wand": "Kupfer-Baustab",
+  "item.simplebuilding.iron_building_wand": "Eisen-Baustab",
+  "item.simplebuilding.gold_building_wand": "Gold-Baustab",
+  "item.simplebuilding.diamond_building_wand": "Diamant-Baustab",
+  "item.simplebuilding.netherite_building_wand": "Netherit-Baustab",
+  "tooltip.simplebuilding.building_wand.size": "Platziert einen Bereich von %s x %s Blöcken.",
   "tooltip.simplebuilding.building_wand.line_size": "Platziert eine Reihe von %s Blöcken.",
 
   "item.simplebuilding.sledgehammer": "Vorschlaghammer",
@@ -41,8 +41,8 @@
   "item.simplebuilding.diamond_sledgehammer": "Diamantvorschlaghammer",
   "item.simplebuilding.netherite_sledgehammer": "Netheritvorschlaghammer",
 
-  "tooltip.simplebuilding.sledgehammer": "Benutzen, um mehrere Blöcke gleichzeitig abzubauen.",
-  "tooltip.simplebuilding.building_wand": "Benutzen, um mehr Blöcke auf einmal zu platzieren.",
+  "tooltip.simplebuilding.sledgehammer": "Wird verwendet, um mehrere Blöcke gleichzeitig abzubauen.",
+  "tooltip.simplebuilding.building_wand": "Wird verwendet, um mehr Blöcke auf einmal zu platzieren.",
 
   "message.simplebuilding.set_pos1_first": "1:",
   "message.simplebuilding.pos1_set": "1:",
@@ -50,7 +50,7 @@
 
   "item.simplebuilding.octant": "Oktant",
   "item.simplebuilding.octant_white": "Weißer Oktant",
-  "item.simplebuilding.octant_orange": "Oranger Oktant",
+  "item.simplebuilding.octant_orange": "Orangefarbener Oktant",
   "item.simplebuilding.octant_magenta": "Magenta Oktant",
   "item.simplebuilding.octant_light_blue": "Hellblauer Oktant",
   "item.simplebuilding.octant_yellow": "Gelber Oktant",
@@ -67,9 +67,9 @@
   "item.simplebuilding.octant_black": "Schwarzer Oktant",
 
   "item.simplebuilding.reinforced_bundle": "Verstärktes Bündel",
-  "tooltip.simplebuilding.reinforced_bundle": "Kann verzaubert mehr Gegenstände halten.",
+  "tooltip.simplebuilding.reinforced_bundle": "Kann mehr Gegenstände halten, wenn es verzaubert ist.",
   "item.simplebuilding.netherite_bundle": "Netheritbündel",
-  "tooltip.simplebuilding.netherite_bundle": "Kann verzaubert noch mehr Gegenstände halten.",
+  "tooltip.simplebuilding.netherite_bundle": "Kann noch mehr Gegenstände halten, wenn es verzaubert ist.",
 
   "item.simplebuilding.quiver": "Köcher",
   "tooltip.simplebuilding.quiver": "Hält Pfeile. Funktioniert in der Nebenhand oder im Brustpanzer-Slot.",
@@ -82,48 +82,42 @@
   "itemgroup.simplebuilding.building_items": "Baugegenstände",
 
   "enchantment.simplebuilding.fast_chiseling": "Schnelles Meißeln",
-  "enchantment.simplebuilding.constructors_touch": "Konstrukteursgriff",
+  "enchantment.simplebuilding.constructors_touch": "Konstrukteurs-Griff",
   "enchantment.simplebuilding.range": "Reichweite",
 
   "enchantment.simplebuilding.deep_pockets": "Tiefe Taschen",
   "enchantment.simplebuilding.deep_pockets.description": "Erhöht die Kapazität von Bündeln.",
   "enchantment.simplebuilding.master_builder": "Meisterbauer",
-  "enchantment.simplebuilding.master_builder.description": "Vergrößert den Wirkungsbereich von Baustäben.",
+  "enchantment.simplebuilding.master_builder.description": "Platziert Blöcke direkt aus deinem Bündel.",
   "enchantment.simplebuilding.funnel": "Trichter",
-  "enchantment.simplebuilding.funnel.description": "Füllt Baustäbe automatisch aus dem Inventar auf.",
-  "enchantment.simplebuilding.quiver": "Köcher",
-  "enchantment.simplebuilding.quiver.description": "Erhöht die Kapazität von Köchern.",
-  "enchantment.simplebuilding.override": "Überschreiben",
-  "enchantment.simplebuilding.override.description": "Erlaubt das Platzieren von Blöcken, die normalerweise nicht platziert werden können.",
+  "enchantment.simplebuilding.funnel.description": "Leitet Gegenstände automatisch in dein Bündel.",
+  "enchantment.simplebuilding.override": "Override",
+  "enchantment.simplebuilding.override.description": "Erlaubt den Abbau von Blöcken, die normalerweise nicht vom Vorschlaghammer unterstützt werden.",
   "enchantment.simplebuilding.radius": "Radius",
-  "enchantment.simplebuilding.radius.description": "Vergrößert den Wirkungsbereich von Vorschlaghämmern.",
-  "enchantment.simplebuilding.strip_miner": "Streifenabbau",
-  "enchantment.simplebuilding.strip_miner.description": "Baut beim Schleichen einen 3x3-Bereich ab.",
-  "enchantment.simplebuilding.vein_miner": "Aderabbau",
-  "enchantment.simplebuilding.vein_miner.description": "Baut beim Schleichen alle verbundenen Blöcke desselben Typs ab.",
-  "enchantment.simplebuilding.kinetic_protection": "Kinetikschutz",
-  "enchantment.simplebuilding.kinetic_protection.description": "Reduziert Fallschaden, wenn verzauberte Rüstung getragen wird.",
+  "enchantment.simplebuilding.radius.description": "Vergrößert den Wirkungsbereich für Vorschlaghämmer.",
+  "enchantment.simplebuilding.strip_miner": "Streifenminer",
+  "enchantment.simplebuilding.strip_miner.description": "Gräbt einen Tunnel beim Schleichen.",
+  "enchantment.simplebuilding.vein_miner": "Ader-Miner",
+  "enchantment.simplebuilding.vein_miner.description": "Baut alle verbundenen Erze desselben Typs ab, wenn man schleicht.",
+  "enchantment.simplebuilding.kinetic_protection": "Kinetischer Schutz",
+  "enchantment.simplebuilding.kinetic_protection.description": "Reduziert kinetischen Schaden.",
   "enchantment.simplebuilding.cover": "Abdeckung",
-  "enchantment.simplebuilding.cover.description": "Füllt gemeißelte Blöcke beim Platzieren automatisch auf.",
+  "enchantment.simplebuilding.cover.description": "Platziert Blöcke auf der Oberfläche, die du ansiehst.",
   "enchantment.simplebuilding.bridge": "Brücke",
-  "enchantment.simplebuilding.bridge.description": "Platziert beim Schleichen Blöcke unter dem Spieler.",
+  "enchantment.simplebuilding.bridge.description": "Platziert Blöcke vor dir.",
   "enchantment.simplebuilding.linear": "Linear",
-  "enchantment.simplebuilding.linear.description": "Platziert beim Schleichen Blöcke in einer geraden Linie.",
-  "enchantment.simplebuilding.tailwind": "Rückenwind",
-  "enchantment.simplebuilding.tailwind.description": "Erhöht die Geschwindigkeit von gerittenen Mobs.",
-  "enchantment.simplebuilding.leaping": "Sprungkraft",
-  "enchantment.simplebuilding.leaping.description": "Erhöht die Sprunghöhe von gerittenen Pferden.",
-  "enchantment.simplebuilding.drawer": "Fassungsvermögen",
-  "enchantment.simplebuilding.drawer.description": "Erhöht die Lagerkapazität von Truhen und Bündeln.",
+  "enchantment.simplebuilding.linear.description": "Platziert Blöcke in einer geraden Linie beim Schleichen.",
+  "enchantment.simplebuilding.drawer": "Schublade",
+  "enchantment.simplebuilding.drawer.description": "Erhöht die Lagerkapazität von Kisten und Bündeln, sperrt sie jedoch auf einen bestimmten Gegenstand.",
   "enchantment.simplebuilding.versatility": "Vielseitigkeit",
-  "enchantment.simplebuilding.versatility.description": "Wechselt zum besten tool für den Blocktyp, wenn man schleicht.",
+  "enchantment.simplebuilding.versatility.description": "Wechselt beim Schleichen zum besten Werkzeug für die Aufgabe.",
 
   "enchantment.simplebuilding.break_through": "Durchbruch",
-  "enchantment.simplebuilding.break_through.description": "Erlaubt dem Vorschlaghammer, Blöcke zu brechen, die normalerweise unzerstörbar sind.",
+  "enchantment.simplebuilding.break_through.description": "Erlaubt dem Vorschlaghammer, eine zweite Schicht Blöcke zu durchbrechen.",
   "enchantment.simplebuilding.color_palette": "Farbpalette",
-  "enchantment.simplebuilding.color_palette.description": "Erlaubt dem Meißel, mehr Blocktypen basierend auf Farbstoffen zu transformieren.",
+  "enchantment.simplebuilding.color_palette.description": "Zufällige Blockplatzierung.",
   "enchantment.simplebuilding.double_jump": "Luftsprung",
-  "enchantment.simplebuilding.double_jump.description": "Erlaubt dem Spieler, einen zusätzlichen Sprung auszuführen.",
+  "enchantment.simplebuilding.double_jump.description": "Erlaubt dem Spieler einen zusätzlichen Sprung.",
 
   "container.enchantments": "Verzauberungen",
   "enchantment.level.1": "I",
@@ -134,46 +128,46 @@
 
   "text.autoconfig.simplebuilding.option.tools": "Werkzeugeinstellungen",
   "text.autoconfig.simplebuilding.option.tools.invertOctantSneak": "Oktant-Schleichen umkehren",
-  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak.@Tooltip": "Wenn wahr, rendert der Oktant den gefüllten Bereich, wenn man NICHT schleicht (mit Berührung des Konstrukteurs).",
+  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak.@Tooltip": "Wenn wahr, rendert der Oktant den gefüllten Bereich, wenn NICHT geschlichen wird (mit Konstrukteurs-Griff).",
   "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity": "Baustab-Hervorhebungsdeckkraft",
-  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity.@Tooltip": "Deckkraft der Block-Hervorhebung des Baustabs (0.0 - 1.0).",
+  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity.@Tooltip": "Deckkraft der Blockhervorhebung des Baustabs (0.0 - 1.0).",
 
   "text.autoconfig.simplebuilding.option.tools.enableToolAnimations": "Werkzeuganimationen aktivieren",
-  "text.autoconfig.simplebuilding.option.tools.enableToolAnimations.@Tooltip": "Schaltet benutzerdefinierte Werkzeuganimationen wie die Meißel-Rotation um.",
-  "text.autoconfig.simplebuilding.option.tools.enableChiselAnimation": "Meißel-Animation aktivieren",
+  "text.autoconfig.simplebuilding.option.tools.enableToolAnimations.@Tooltip": "Schaltet benutzerdefinierte Werkzeuganimationen wie die Meißelrotation um.",
+  "text.autoconfig.simplebuilding.option.tools.enableChiselAnimation": "Meißelanimation aktivieren",
   "text.autoconfig.simplebuilding.option.tools.enableChiselAnimation.@Tooltip": "Spezifischer Schalter für das visuelle Feedback des Meißels.",
 
   "text.autoconfig.simplebuilding.option.worldGen": "Weltgenerierung & Wirtschaft",
-  "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades": "Dorfbewohner-Handel aktivieren",
+  "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades": "Dorfbewohnerhandel aktivieren",
   "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades.@Tooltip": "Fügt Meißel- und Baustab-Handel zu Dorfbewohnern hinzu.",
-  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades": "Fahrender Händler aktivieren",
-  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades.@Tooltip": "Fügt Meißel- und Baustab-Handel zu Fahrenden Händlern hinzu.",
-  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges": "Beutetruhen aktivieren",
-  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges.@Tooltip": "Fügt Gegenstände zu Dungeon-/Strukturtruhen hinzu.",
+  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades": "Fahrenden Händler aktivieren",
+  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades.@Tooltip": "Fügt Meißel- und Baustab-Handel zu fahrenden Händlern hinzu.",
+  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges": "Beutekisten aktivieren",
+  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges.@Tooltip": "Fügt Gegenstände zu Dungeon-/Strukturkisten hinzu.",
 
   "text.autoconfig.simplebuilding.option.enchantments": "Verzauberungs-Balancing",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide": "Einstellungen für 'Schneller Ritt'",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide": "Schneller Ritt Einstellungen",
 
   "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier": "Ghast-Geschwindigkeitsschub",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Glückliche Ghasts (Standard: 0.40).",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für glückliche Ghasts (Standard: 0.40).",
 
   "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier": "Pferde-Geschwindigkeitsschub",
   "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Pferde (Standard: 0.12).",
 
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier": "Mob-Geschwindigkeitsschub (Andere)",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier": "Anderer Mob-Geschwindigkeitsschub",
   "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Schweine/Schreiter (Standard: 0.15).",
 
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump": "Pferdesprung-Einstellungen",
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier": "Sprungstärke-Schub",
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier.@Tooltip": "Sprungstärkemultiplikator pro Verzauberungsstufe auf Pferderüstung (Standard: 0.20).",
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump": "Pferdesprung Einstellungen",
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier": "Sprungkraftschub",
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier.@Tooltip": "Sprungkraftmultiplikator pro Verzauberungsstufe auf Pferderüstung (Standard: 0.20).",
 
   "text.autoconfig.simplebuilding.option.tools.buildingHighlightOpacity": "Baustab-Hervorhebungsdeckkraft",
 
   "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions": "Bündel-Interaktionen umkehren",
-  "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions.@Tooltip": "Wenn wahr, führt Schleichen bei der Verwendung von Bündeln die gegenteilige Aktion aus (Einlegen vs. Entnehmen).",
+  "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions.@Tooltip": "Wenn wahr, führt Schleichen bei der Verwendung von Bündeln die entgegengesetzte Aktion aus (Einfügen vs. Entnehmen).",
 
-  "text.autoconfig.simplebuilding.option.enableDoubleJump": "Doppelsprung aktiviert",
-  "text.autoconfig.simplebuilding.option.tools.enableDoubleJump.@Tooltip": "Ermöglicht dem Spieler, einen zusätzlichen Sprung auszuführen, wenn diese Option aktiviert ist.",
+  "text.autoconfig.simplebuilding.option.enableDoubleJump": "Doppelsprung-Verzauberung aktivieren",
+  "text.autoconfig.simplebuilding.option.tools.enableDoubleJump.@Tooltip": "Schaltet die Doppelsprung-Verzauberungsfunktion um.",
 
   "block.simplebuilding.reinforced_chest": "Verstärkte Truhe",
   "item.simplebuilding.reinforced_chest": "Verstärkte Truhe",
@@ -189,14 +183,14 @@
   "item.simplebuilding.reinforced_piston": "Verstärkter Kolben",
   "block.simplebuilding.netherite_piston": "Netheritkolben",
   "item.simplebuilding.netherite_piston": "Netheritkolben",
-  "tooltip.simplebuilding.netherite_piston": "Baut Blöcke basierend auf Redstone-Stärke ab (1-15).",
+  "tooltip.simplebuilding.netherite_piston": "Bricht Blöcke basierend auf der Redstone-Stärke (1-15).",
 
-  "block.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
-  "container.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
-  "item.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
-  "container.simplebuilding.netherite_blast_furnace": "Netheritschmelzofen",
-  "block.simplebuilding.netherite_blast_furnace": "Netheritschmelzofen",
-  "item.simplebuilding.netherite_blast_furnace": "Netheritschmelzofen",
+  "block.simplebuilding.reinforced_blast_furnace": "Verstärkter Hochofen",
+  "container.simplebuilding.reinforced_blast_furnace": "Verstärkter Hochofen",
+  "item.simplebuilding.reinforced_blast_furnace": "Verstärkter Hochofen",
+  "container.simplebuilding.netherite_blast_furnace": "Netherithochofen",
+  "block.simplebuilding.netherite_blast_furnace": "Netherithochofen",
+  "item.simplebuilding.netherite_blast_furnace": "Netherithochofen",
 
   "item.simplebuilding.construction_light": "Baulicht",
 
