more reinfoced and netherrite furnaces.

--- a/src/main/resources/assets/simplebuilding/lang/de_de.json
+++ b/src/main/resources/assets/simplebuilding/lang/de_de.json
@@ -6,8 +6,8 @@
   "item.simplebuilding.diamond_chisel": "Diamantmeißel",
   "item.simplebuilding.netherite_chisel": "Netheritmeißel",
 
-  "tooltip.simplebuilding.chisel": "Wird verwendet, um Blöcke zu formen.",
-  "tooltip.simplebuilding.chisel.shift_down": "Rechtsklick auf einen formbaren Block. Schleichen zum Umkehren.",
+  "tooltip.simplebuilding.chisel": "Benutzen, um Blöcke zu formen.",
+  "tooltip.simplebuilding.chisel.shift_down": "Rechtsklick auf einen veränderbaren Block. Schleichen zum Umkehren.",
 
   "item.simplebuilding.stone_spatula": "Steinspachtel",
   "item.simplebuilding.copper_spatula": "Kupferspachtel",
@@ -16,8 +16,8 @@
   "item.simplebuilding.diamond_spatula": "Diamantspachtel",
   "item.simplebuilding.netherite_spatula": "Netheritspachtel",
 
-  "tooltip.simplebuilding.spatula": "Wird verwendet, um Blöcke zu glätten.",
-  "tooltip.simplebuilding.spatula.shift_down": "Rechtsklick auf einen formbaren Block.",
+  "tooltip.simplebuilding.spatula": "Benutzen, um Blöcke zu glätten.",
+  "tooltip.simplebuilding.spatula.shift_down": "Rechtsklick auf einen veränderbaren Block.",
 
   "item.simplebuilding.copper_core": "Kupferkern",
   "item.simplebuilding.iron_core": "Eisenkern",
@@ -30,8 +30,8 @@
   "item.simplebuilding.gold_building_wand": "Gold-Baustab",
   "item.simplebuilding.diamond_building_wand": "Diamant-Baustab",
   "item.simplebuilding.netherite_building_wand": "Netherit-Baustab",
-  "tooltip.simplebuilding.building_wand.size": "Platziert einen Bereich von %s x %s Blöcken.",
-  "tooltip.simplebuilding.building_wand.line_size": "Platziert eine Reihe von %s Blöcken.",
+  "tooltip.simplebuilding.building_wand.size": "Platziert einen %s x %s Bereich an Blöcken.",
+  "tooltip.simplebuilding.building_wand.line_size": "Platziert eine Linie von %s Blöcken.",
 
   "item.simplebuilding.sledgehammer": "Vorschlaghammer",
   "item.simplebuilding.stone_sledgehammer": "Steinvorschlaghammer",
@@ -41,8 +41,8 @@
   "item.simplebuilding.diamond_sledgehammer": "Diamantvorschlaghammer",
   "item.simplebuilding.netherite_sledgehammer": "Netheritvorschlaghammer",
 
-  "tooltip.simplebuilding.sledgehammer": "Wird verwendet, um mehrere Blöcke gleichzeitig abzubauen.",
-  "tooltip.simplebuilding.building_wand": "Wird verwendet, um mehr Blöcke auf einmal zu platzieren.",
+  "tooltip.simplebuilding.sledgehammer": "Benutzen, um mehrere Blöcke gleichzeitig abzubauen.",
+  "tooltip.simplebuilding.building_wand": "Benutzen, um mehr Blöcke gleichzeitig zu platzieren.",
 
   "message.simplebuilding.set_pos1_first": "1:",
   "message.simplebuilding.pos1_set": "1:",
@@ -50,7 +50,7 @@
 
   "item.simplebuilding.octant": "Oktant",
   "item.simplebuilding.octant_white": "Weißer Oktant",
-  "item.simplebuilding.octant_orange": "Orangefarbener Oktant",
+  "item.simplebuilding.octant_orange": "Oranger Oktant",
   "item.simplebuilding.octant_magenta": "Magenta Oktant",
   "item.simplebuilding.octant_light_blue": "Hellblauer Oktant",
   "item.simplebuilding.octant_yellow": "Gelber Oktant",
@@ -67,14 +67,14 @@
   "item.simplebuilding.octant_black": "Schwarzer Oktant",
 
   "item.simplebuilding.reinforced_bundle": "Verstärktes Bündel",
-  "tooltip.simplebuilding.reinforced_bundle": "Kann mehr Gegenstände halten, wenn es verzaubert ist.",
-  "item.simplebuilding.netherite_bundle": "Netheritbündel",
-  "tooltip.simplebuilding.netherite_bundle": "Kann noch mehr Gegenstände halten, wenn es verzaubert ist.",
+  "tooltip.simplebuilding.reinforced_bundle": "Kann mehr Items halten, wenn verzaubert.",
+  "item.simplebuilding.netherite_bundle": "Netherit-Bündel",
+  "tooltip.simplebuilding.netherite_bundle": "Kann noch mehr Items halten, wenn verzaubert.",
 
   "item.simplebuilding.quiver": "Köcher",
-  "tooltip.simplebuilding.quiver": "Hält Pfeile. Funktioniert in der Nebenhand oder im Brustpanzer-Slot.",
-  "item.simplebuilding.netherite_quiver": "Netheritköcher",
-  "tooltip.simplebuilding.netherite_quiver": "Hält mehr Pfeile. Funktioniert in der Nebenhand oder im Brustpanzer-Slot.",
+  "tooltip.simplebuilding.quiver": "Hält Pfeile. Funktioniert in der Zweithand oder im Brustpanzer-Slot.",
+  "item.simplebuilding.netherite_quiver": "Netherit-Köcher",
+  "tooltip.simplebuilding.netherite_quiver": "Hält mehr Pfeile. Funktioniert in der Zweithand oder im Brustpanzer-Slot.",
 
   "item.simplebuilding.velocity-gauge": "Geschwindigkeitsmesser",
   "tooltip.simplebuilding.velocity-gauge.tooltip": "Zeigt die aktuelle Geschwindigkeit des Spielers an.",
@@ -82,41 +82,41 @@
   "itemgroup.simplebuilding.building_items": "Baugegenstände",
 
   "enchantment.simplebuilding.fast_chiseling": "Schnelles Meißeln",
-  "enchantment.simplebuilding.constructors_touch": "Konstrukteurs-Griff",
+  "enchantment.simplebuilding.constructors_touch": "Berührung des Konstrukteurs",
   "enchantment.simplebuilding.range": "Reichweite",
 
   "enchantment.simplebuilding.deep_pockets": "Tiefe Taschen",
   "enchantment.simplebuilding.deep_pockets.description": "Erhöht die Kapazität von Bündeln.",
-  "enchantment.simplebuilding.master_builder": "Meisterbauer",
-  "enchantment.simplebuilding.master_builder.description": "Platziert Blöcke direkt aus deinem Bündel.",
+  "enchantment.simplebuilding.master_builder": "Baumeister",
+  "enchantment.simplebuilding.master_builder.description": "Platziert Blöcke direkt aus dem Bündel.",
   "enchantment.simplebuilding.funnel": "Trichter",
-  "enchantment.simplebuilding.funnel.description": "Leitet Gegenstände automatisch in dein Bündel.",
-  "enchantment.simplebuilding.override": "Override",
-  "enchantment.simplebuilding.override.description": "Erlaubt den Abbau von Blöcken, die normalerweise nicht vom Vorschlaghammer unterstützt werden.",
+  "enchantment.simplebuilding.funnel.description": "Leitet Items automatisch in das Bündel.",
+  "enchantment.simplebuilding.override": "Überschreiben",
+  "enchantment.simplebuilding.override.description": "Erlaubt das Abbauen von Blöcken, die normalerweise nicht vom Vorschlaghammer unterstützt werden.",
   "enchantment.simplebuilding.radius": "Radius",
-  "enchantment.simplebuilding.radius.description": "Vergrößert den Wirkungsbereich für Vorschlaghämmer.",
+  "enchantment.simplebuilding.radius.description": "Erhöht den Wirkungsbereich für Vorschlaghämmer.",
   "enchantment.simplebuilding.strip_miner": "Streifenminer",
   "enchantment.simplebuilding.strip_miner.description": "Gräbt einen Tunnel beim Schleichen.",
-  "enchantment.simplebuilding.vein_miner": "Ader-Miner",
-  "enchantment.simplebuilding.vein_miner.description": "Baut alle verbundenen Erze desselben Typs ab, wenn man schleicht.",
+  "enchantment.simplebuilding.vein_miner": "Adernminer",
+  "enchantment.simplebuilding.vein_miner.description": "Baut alle verbundenen Erze des gleichen Typs ab, wenn man schleicht.",
   "enchantment.simplebuilding.kinetic_protection": "Kinetischer Schutz",
   "enchantment.simplebuilding.kinetic_protection.description": "Reduziert kinetischen Schaden.",
-  "enchantment.simplebuilding.cover": "Abdeckung",
+  "enchantment.simplebuilding.cover": "Bedecken",
   "enchantment.simplebuilding.cover.description": "Platziert Blöcke auf der Oberfläche, die du ansiehst.",
   "enchantment.simplebuilding.bridge": "Brücke",
   "enchantment.simplebuilding.bridge.description": "Platziert Blöcke vor dir.",
   "enchantment.simplebuilding.linear": "Linear",
   "enchantment.simplebuilding.linear.description": "Platziert Blöcke in einer geraden Linie beim Schleichen.",
   "enchantment.simplebuilding.drawer": "Schublade",
-  "enchantment.simplebuilding.drawer.description": "Erhöht die Lagerkapazität von Kisten und Bündeln, sperrt sie jedoch auf einen bestimmten Gegenstand.",
+  "enchantment.simplebuilding.drawer.description": "Erhöht die Lagerkapazität von Truhen und Bündeln, sperrt aber auf das spezifische Item.",
   "enchantment.simplebuilding.versatility": "Vielseitigkeit",
-  "enchantment.simplebuilding.versatility.description": "Wechselt beim Schleichen zum besten Werkzeug für die Aufgabe.",
+  "enchantment.simplebuilding.versatility.description": "Wechselt beim Schleichen zum besten Werkzeug für den Job.",
 
   "enchantment.simplebuilding.break_through": "Durchbruch",
-  "enchantment.simplebuilding.break_through.description": "Erlaubt dem Vorschlaghammer, eine zweite Schicht Blöcke zu durchbrechen.",
+  "enchantment.simplebuilding.break_through.description": "Erlaubt dem Vorschlaghammer, eine zweite Schicht Blöcke zu brechen.",
   "enchantment.simplebuilding.color_palette": "Farbpalette",
   "enchantment.simplebuilding.color_palette.description": "Zufällige Blockplatzierung.",
-  "enchantment.simplebuilding.double_jump": "Luftsprung",
+  "enchantment.simplebuilding.double_jump": "Doppelsprung",
   "enchantment.simplebuilding.double_jump.description": "Erlaubt dem Spieler einen zusätzlichen Sprung.",
 
   "container.enchantments": "Verzauberungen",
@@ -127,9 +127,9 @@
   "enchantment.level.5": "V",
 
   "text.autoconfig.simplebuilding.option.tools": "Werkzeugeinstellungen",
-  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak": "Oktant-Schleichen umkehren",
-  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak.@Tooltip": "Wenn wahr, rendert der Oktant den gefüllten Bereich, wenn NICHT geschlichen wird (mit Konstrukteurs-Griff).",
-  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity": "Baustab-Hervorhebungsdeckkraft",
+  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak": "Oktant Schleichen umkehren",
+  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak.@Tooltip": "Wenn wahr, rendert der Oktant den gefüllten Bereich, wenn NICHT geschlichen wird (mit Berührung des Konstrukteurs).",
+  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity": "Baustab Hervorhebung Deckkraft",
   "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity.@Tooltip": "Deckkraft der Blockhervorhebung des Baustabs (0.0 - 1.0).",
 
   "text.autoconfig.simplebuilding.option.tools.enableToolAnimations": "Werkzeuganimationen aktivieren",
@@ -138,63 +138,88 @@
   "text.autoconfig.simplebuilding.option.tools.enableChiselAnimation.@Tooltip": "Spezifischer Schalter für das visuelle Feedback des Meißels.",
 
   "text.autoconfig.simplebuilding.option.worldGen": "Weltgenerierung & Wirtschaft",
-  "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades": "Dorfbewohnerhandel aktivieren",
+  "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades": "Dorfbewohner-Handel aktivieren",
   "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades.@Tooltip": "Fügt Meißel- und Baustab-Handel zu Dorfbewohnern hinzu.",
   "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades": "Fahrenden Händler aktivieren",
-  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades.@Tooltip": "Fügt Meißel- und Baustab-Handel zu fahrenden Händlern hinzu.",
-  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges": "Beutekisten aktivieren",
-  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges.@Tooltip": "Fügt Gegenstände zu Dungeon-/Strukturkisten hinzu.",
+  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades.@Tooltip": "Fügt Meißel- und Baustab-Handel zum Fahrenden Händler hinzu.",
+  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges": "Beutetruhen aktivieren",
+  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges.@Tooltip": "Fügt Items zu Verlies-/Strukturtruhen hinzu.",
 
   "text.autoconfig.simplebuilding.option.enchantments": "Verzauberungs-Balancing",
   "text.autoconfig.simplebuilding.option.enchantments.swiftRide": "Schneller Ritt Einstellungen",
 
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier": "Ghast-Geschwindigkeitsschub",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für glückliche Ghasts (Standard: 0.40).",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier": "Ghast Geschwindigkeitsboost",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Glückliche Ghasts (Standard: 0.40).",
 
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier": "Pferde-Geschwindigkeitsschub",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier": "Pferd Geschwindigkeitsboost",
   "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Pferde (Standard: 0.12).",
 
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier": "Anderer Mob-Geschwindigkeitsschub",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier": "Andere Mobs Geschwindigkeitsboost",
   "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Schweine/Schreiter (Standard: 0.15).",
 
   "text.autoconfig.simplebuilding.option.enchantments.horseJump": "Pferdesprung Einstellungen",
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier": "Sprungkraftschub",
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier.@Tooltip": "Sprungkraftmultiplikator pro Verzauberungsstufe auf Pferderüstung (Standard: 0.20).",
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier": "Sprungstärke Boost",
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier.@Tooltip": "Sprungstärkenmultiplikator pro Verzauberungsstufe auf Pferderüstung (Standard: 0.20).",
 
-  "text.autoconfig.simplebuilding.option.tools.buildingHighlightOpacity": "Baustab-Hervorhebungsdeckkraft",
+  "text.autoconfig.simplebuilding.option.tools.buildingHighlightOpacity": "Baustab Hervorhebung Deckkraft",
 
   "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions": "Bündel-Interaktionen umkehren",
-  "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions.@Tooltip": "Wenn wahr, führt Schleichen bei der Verwendung von Bündeln die entgegengesetzte Aktion aus (Einfügen vs. Entnehmen).",
+  "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions.@Tooltip": "Wenn wahr, führt Schleichen beim Benutzen von Bündeln die entgegengesetzte Aktion aus (Einfügen vs Entnehmen).",
 
   "text.autoconfig.simplebuilding.option.enableDoubleJump": "Doppelsprung-Verzauberung aktivieren",
-  "text.autoconfig.simplebuilding.option.tools.enableDoubleJump.@Tooltip": "Schaltet die Doppelsprung-Verzauberungsfunktion um.",
+  "text.autoconfig.simplebuilding.option.tools.enableDoubleJump.@Tooltip": "Schaltet die Doppelsprung-Verzauberungsfunktionalität um.",
 
   "block.simplebuilding.reinforced_chest": "Verstärkte Truhe",
   "item.simplebuilding.reinforced_chest": "Verstärkte Truhe",
-  "block.simplebuilding.netherite_chest": "Netherittruhe",
-  "item.simplebuilding.netherite_chest": "Netherittruhe",
+  "block.simplebuilding.netherite_chest": "Netherit-Truhe",
+  "item.simplebuilding.netherite_chest": "Netherit-Truhe",
 
   "block.simplebuilding.reinforced_hopper": "Verstärkter Trichter",
   "item.simplebuilding.reinforced_hopper": "Verstärkter Trichter",
-  "block.simplebuilding.netherite_hopper": "Netherittrichter",
-  "item.simplebuilding.netherite_hopper": "Netherittrichter",
+  "block.simplebuilding.netherite_hopper": "Netherit-Trichter",
+  "item.simplebuilding.netherite_hopper": "Netherit-Trichter",
 
   "block.simplebuilding.reinforced_piston": "Verstärkter Kolben",
   "item.simplebuilding.reinforced_piston": "Verstärkter Kolben",
-  "block.simplebuilding.netherite_piston": "Netheritkolben",
-  "item.simplebuilding.netherite_piston": "Netheritkolben",
-  "tooltip.simplebuilding.netherite_piston": "Bricht Blöcke basierend auf der Redstone-Stärke (1-15).",
+  "block.simplebuilding.netherite_piston": "Netherit-Kolben",
+  "item.simplebuilding.netherite_piston": "Netherit-Kolben",
+  "tooltip.simplebuilding.netherite_piston": "Baut Blöcke basierend auf Redstone-Stärke (1-15) ab.",
 
-  "block.simplebuilding.reinforced_blast_furnace": "Verstärkter Hochofen",
-  "container.simplebuilding.reinforced_blast_furnace": "Verstärkter Hochofen",
-  "item.simplebuilding.reinforced_blast_furnace": "Verstärkter Hochofen",
-  "container.simplebuilding.netherite_blast_furnace": "Netherithochofen",
-  "block.simplebuilding.netherite_blast_furnace": "Netherithochofen",
-  "item.simplebuilding.netherite_blast_furnace": "Netherithochofen",
+  "block.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
+  "container.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
+  "item.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
+  "container.simplebuilding.netherite_blast_furnace": "Netherit-Schmelzofen",
+  "block.simplebuilding.netherite_blast_furnace": "Netherit-Schmelzofen",
+  "item.simplebuilding.netherite_blast_furnace": "Netherit-Schmelzofen",
+
+  "block.simplebuilding.reinforced_furnace": "Verstärkter Ofen",
+  "container.simplebuilding.reinforced_furnace": "Verstärkter Ofen",
+  "item.simplebuilding.reinforced_furnace": "Verstärkter Ofen",
+  "container.simplebuilding.netherite_furnace": "Netherit-Ofen",
+  "block.simplebuilding.netherite_furnace": "Netherit-Ofen",
+  "item.simplebuilding.netherite_furnace": "Netherit-Ofen",
+
+  "block.simplebuilding.reinforced_smoker": "Verstärkter Räucherofen",
+  "container.simplebuilding.reinforced_smoker": "Verstärkter Räucherofen",
+  "item.simplebuilding.reinforced_smoker": "Verstärkter Räucherofen",
+  "container.simplebuilding.netherite_smoker": "Netherit-Räucherofen",
+  "block.simplebuilding.netherite_smoker": "Netherit-Räucherofen",
+  "item.simplebuilding.netherite_smoker": "Netherit-Räucherofen",
 
   "item.simplebuilding.construction_light": "Baulicht",
 
   "item.simplebuilding.diamond_pebble": "Diamantkiesel",
   "item.simplebuilding.cracked_diamond": "Rissiger Diamant",
-  "item.simplebuilding.cracked_diamond_block": "Rissiger Diamantblock"
+  "item.simplebuilding.cracked_diamond_block": "Rissiger Diamantblock",
+
+  "simplebuilding.gui.title": "Octant Manager",
+  "simplebuilding.gui.locked": "§c[ GESPERRT ]",
+  "simplebuilding.gui.unlocked": "§a[ ENTSPERRT ]",
+  "simplebuilding.gui.pos1": "Startpunkt (Pos 1)",
+  "simplebuilding.gui.pos2": "Endpunkt (Pos 2)",
+  "simplebuilding.gui.size": "Größe (B x H x T)",
+  "simplebuilding.gui.shape": "Form: %s",
+  "simplebuilding.gui.close": "Fertig",
+  "simplebuilding.gui.lock_tooltip": "Sperrt die Form, um versehentliches Klicken zu verhindern."
+
 }
