--- a/src/main/resources/assets/simplebuilding/lang/en_us.json
+++ b/src/main/resources/assets/simplebuilding/lang/en_us.json
@@ -88,34 +88,34 @@
   "enchantment.simplebuilding.deep_pockets": "Deep Pockets",
   "enchantment.simplebuilding.deep_pockets.description": "Increases the capacity of bundles.",
   "enchantment.simplebuilding.master_builder": "Master Builder",
-    "enchantment.simplebuilding.master_builder.description": "Places blocks directly from your bundle.",
+  "enchantment.simplebuilding.master_builder.description": "Places blocks directly from your bundle.",
   "enchantment.simplebuilding.funnel": "Funnel",
-    "enchantment.simplebuilding.funnel.description": "Automatically funnels items into your bundle.",
+  "enchantment.simplebuilding.funnel.description": "Automatically funnels items into your bundle.",
   "enchantment.simplebuilding.override": "Override",
-    "enchantment.simplebuilding.override.description": "Allows mining of blocks which are normally not supported by the sledgehammer.",
+  "enchantment.simplebuilding.override.description": "Allows mining of blocks which are normally not supported by the sledgehammer.",
   "enchantment.simplebuilding.radius": "Radius",
-    "enchantment.simplebuilding.radius.description": "Increases the area of effect for sledgehammers.",
+  "enchantment.simplebuilding.radius.description": "Increases the area of effect for sledgehammers.",
   "enchantment.simplebuilding.strip_miner": "Strip Miner",
-    "enchantment.simplebuilding.strip_miner.description": "Mines a tunnel when sneaking.",
+  "enchantment.simplebuilding.strip_miner.description": "Mines a tunnel when sneaking.",
   "enchantment.simplebuilding.vein_miner": "Vein Miner",
-    "enchantment.simplebuilding.vein_miner.description": "Mines all connected ores of the same type when sneaking.",
+  "enchantment.simplebuilding.vein_miner.description": "Mines all connected ores of the same type when sneaking.",
   "enchantment.simplebuilding.kinetic_protection": "Kinetic Protection",
-    "enchantment.simplebuilding.kinetic_protection.description": "Reduces kinetic damage.",
+  "enchantment.simplebuilding.kinetic_protection.description": "Reduces kinetic damage.",
   "enchantment.simplebuilding.cover": "Cover",
-    "enchantment.simplebuilding.cover.description": "Places a blocks on the surface you're looking",
+  "enchantment.simplebuilding.cover.description": "Places blocks on the surface you're looking at.",
   "enchantment.simplebuilding.bridge": "Bridge",
-    "enchantment.simplebuilding.bridge.description": "Places blocks infront of you.",
+  "enchantment.simplebuilding.bridge.description": "Places blocks in front of you.",
   "enchantment.simplebuilding.linear": "Linear",
-    "enchantment.simplebuilding.linear.description": "Places blocks in a straight line when sneaking.",
+  "enchantment.simplebuilding.linear.description": "Places blocks in a straight line when sneaking.",
   "enchantment.simplebuilding.drawer": "Drawer",
   "enchantment.simplebuilding.drawer.description": "Increases the storage capacity of chests and bundles, but locks to the specific item.",
   "enchantment.simplebuilding.versatility": "Versatility",
   "enchantment.simplebuilding.versatility.description": "When sneaking, switches to best tool for the job.",
 
   "enchantment.simplebuilding.break_through": "Break Through",
-    "enchantment.simplebuilding.break_through.description": "Allows the sledgehammer to break a second layer of blocks.",
+  "enchantment.simplebuilding.break_through.description": "Allows the sledgehammer to break a second layer of blocks.",
   "enchantment.simplebuilding.color_palette": "Color Palette",
-    "enchantment.simplebuilding.color_palette.description": "Randomizes blockplacement.",
+  "enchantment.simplebuilding.color_palette.description": "Randomizes block placement.",
   "enchantment.simplebuilding.double_jump": "Air Jump",
   "enchantment.simplebuilding.double_jump.description": "Allows the player to perform an additional jump.",
 
@@ -164,10 +164,10 @@
   "text.autoconfig.simplebuilding.option.tools.buildingHighlightOpacity": "Building Wand Highlight Opacity",
 
   "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions": "Invert Bundle Interactions",
-    "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions.@Tooltip": "If true sneaking while using bundles will perform the opposite action (insert vs extract).",
+  "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions.@Tooltip": "If true sneaking while using bundles will perform the opposite action (insert vs extract).",
 
   "text.autoconfig.simplebuilding.option.enableDoubleJump": "Enable Double Jump Enchantment",
-    "text.autoconfig.simplebuilding.option.tools.enableDoubleJump.@Tooltip": "Toggles the Double Jump enchantment functionality.",
+  "text.autoconfig.simplebuilding.option.tools.enableDoubleJump.@Tooltip": "Toggles the Double Jump enchantment functionality.",
 
   "block.simplebuilding.reinforced_chest": "Reinforced Chest",
   "item.simplebuilding.reinforced_chest": "Reinforced Chest",
@@ -192,9 +192,35 @@
   "block.simplebuilding.netherite_blast_furnace": "Netherite Blast Furnace",
   "item.simplebuilding.netherite_blast_furnace": "Netherite Blast Furnace",
 
+  "block.simplebuilding.reinforced_furnace": "Reinforced Furnace",
+  "container.simplebuilding.reinforced_furnace": "Reinforced Furnace",
+  "item.simplebuilding.reinforced_furnace": "Reinforced Furnace",
+  "container.simplebuilding.netherite_furnace": "Netherite Furnace",
+  "block.simplebuilding.netherite_furnace": "Netherite Furnace",
+  "item.simplebuilding.netherite_furnace": "Netherite Furnace",
+
+  "block.simplebuilding.reinforced_smoker": "Reinforced Smoker",
+  "container.simplebuilding.reinforced_smoker": "Reinforced Smoker",
+  "item.simplebuilding.reinforced_smoker": "Reinforced Smoker",
+  "container.simplebuilding.netherite_smoker": "Netherite Smoker",
+  "block.simplebuilding.netherite_smoker": "Netherite Smoker",
+  "item.simplebuilding.netherite_smoker": "Netherite Smoker",
+
   "item.simplebuilding.construction_light": "Construction Light",
 
   "item.simplebuilding.diamond_pebble": "Diamond Pebble",
   "item.simplebuilding.cracked_diamond": "Cracked Diamond",
-  "item.simplebuilding.cracked_diamond_block": "Cracked Diamond Block"
+  "item.simplebuilding.cracked_diamond_block": "Cracked Diamond Block",
+
+
+  "simplebuilding.gui.title": "Octant Manager",
+  "simplebuilding.gui.locked": "§c[ GESPERRT ]",
+  "simplebuilding.gui.unlocked": "§a[ ENTSPERRT ]",
+  "simplebuilding.gui.pos1": "Startpunkt (Pos 1)",
+  "simplebuilding.gui.pos2": "Endpunkt (Pos 2)",
+  "simplebuilding.gui.size": "Größe (B x H x T)",
+  "simplebuilding.gui.shape": "Form: %s",
+  "simplebuilding.gui.close": "Fertig",
+  "simplebuilding.gui.lock_tooltip": "Sperrt die Form, um versehentliches Klicken zu verhindern."
+
 }
