--- a/src/main/resources/assets/simplebuilding/lang/de_de.json
+++ b/src/main/resources/assets/simplebuilding/lang/de_de.json
@@ -6,7 +6,7 @@
   "item.simplebuilding.diamond_chisel": "Diamantmeißel",
   "item.simplebuilding.netherite_chisel": "Netheritmeißel",
 
-  "tooltip.simplebuilding.chisel": "Benutzen, um Blöcke zu formen.",
+  "tooltip.simplebuilding.chisel": "Benutze dies, um Blöcke zu formen.",
   "tooltip.simplebuilding.chisel.shift_down": "Rechtsklick auf einen veränderbaren Block. Schleichen zum Umkehren.",
 
   "item.simplebuilding.stone_spatula": "Steinspachtel",
@@ -16,7 +16,7 @@
   "item.simplebuilding.diamond_spatula": "Diamantspachtel",
   "item.simplebuilding.netherite_spatula": "Netheritspachtel",
 
-  "tooltip.simplebuilding.spatula": "Benutzen, um Blöcke zu glätten.",
+  "tooltip.simplebuilding.spatula": "Benutze dies, um Blöcke zu glätten.",
   "tooltip.simplebuilding.spatula.shift_down": "Rechtsklick auf einen veränderbaren Block.",
 
   "item.simplebuilding.copper_core": "Kupferkern",
@@ -25,13 +25,13 @@
   "item.simplebuilding.diamond_core": "Diamantkern",
   "item.simplebuilding.netherite_core": "Netheritkern",
 
-  "item.simplebuilding.copper_building_wand": "Kupfer-Baustab",
-  "item.simplebuilding.iron_building_wand": "Eisen-Baustab",
-  "item.simplebuilding.gold_building_wand": "Gold-Baustab",
-  "item.simplebuilding.diamond_building_wand": "Diamant-Baustab",
-  "item.simplebuilding.netherite_building_wand": "Netherit-Baustab",
-  "tooltip.simplebuilding.building_wand.size": "Platziert einen %s x %s Bereich an Blöcken.",
-  "tooltip.simplebuilding.building_wand.line_size": "Platziert eine Linie von %s Blöcken.",
+  "item.simplebuilding.copper_building_wand": "Kupferbaustab",
+  "item.simplebuilding.iron_building_wand": "Eisenbaustab",
+  "item.simplebuilding.gold_building_wand": "Goldbaustab",
+  "item.simplebuilding.diamond_building_wand": "Diamantbaustab",
+  "item.simplebuilding.netherite_building_wand": "Netheritbaustab",
+  "tooltip.simplebuilding.building_wand.size": "Platziert eine Fläche von %s x %s Blöcken.",
+  "tooltip.simplebuilding.building_wand.line_size": "Platziert eine Reihe von %s Blöcken.",
 
   "item.simplebuilding.sledgehammer": "Vorschlaghammer",
   "item.simplebuilding.stone_sledgehammer": "Steinvorschlaghammer",
@@ -41,8 +41,8 @@
   "item.simplebuilding.diamond_sledgehammer": "Diamantvorschlaghammer",
   "item.simplebuilding.netherite_sledgehammer": "Netheritvorschlaghammer",
 
-  "tooltip.simplebuilding.sledgehammer": "Benutzen, um mehrere Blöcke gleichzeitig abzubauen.",
-  "tooltip.simplebuilding.building_wand": "Benutzen, um mehr Blöcke gleichzeitig zu platzieren.",
+  "tooltip.simplebuilding.sledgehammer": "Benutze dies, um mehrere Blöcke auf einmal abzubauen.",
+  "tooltip.simplebuilding.building_wand": "Benutze dies, um mehr Blöcke auf einmal zu platzieren.",
 
   "message.simplebuilding.set_pos1_first": "1:",
   "message.simplebuilding.pos1_set": "1:",
@@ -67,14 +67,14 @@
   "item.simplebuilding.octant_black": "Schwarzer Oktant",
 
   "item.simplebuilding.reinforced_bundle": "Verstärktes Bündel",
-  "tooltip.simplebuilding.reinforced_bundle": "Kann mehr Items halten, wenn verzaubert.",
-  "item.simplebuilding.netherite_bundle": "Netherit-Bündel",
-  "tooltip.simplebuilding.netherite_bundle": "Kann noch mehr Items halten, wenn verzaubert.",
+  "tooltip.simplebuilding.reinforced_bundle": "Kann verzaubert mehr Gegenstände halten.",
+  "item.simplebuilding.netherite_bundle": "Netheritbündel",
+  "tooltip.simplebuilding.netherite_bundle": "Kann verzaubert noch mehr Gegenstände halten.",
 
   "item.simplebuilding.quiver": "Köcher",
-  "tooltip.simplebuilding.quiver": "Hält Pfeile. Funktioniert in der Zweithand oder im Brustpanzer-Slot.",
-  "item.simplebuilding.netherite_quiver": "Netherit-Köcher",
-  "tooltip.simplebuilding.netherite_quiver": "Hält mehr Pfeile. Funktioniert in der Zweithand oder im Brustpanzer-Slot.",
+  "tooltip.simplebuilding.quiver": "Hält Pfeile. Funktioniert in der Nebenhand oder im Brustpanzer-Slot.",
+  "item.simplebuilding.netherite_quiver": "Netheritköcher",
+  "tooltip.simplebuilding.netherite_quiver": "Hält mehr Pfeile. Funktioniert in der Nebenhand oder im Brustpanzer-Slot.",
 
   "item.simplebuilding.velocity-gauge": "Geschwindigkeitsmesser",
   "tooltip.simplebuilding.velocity-gauge.tooltip": "Zeigt die aktuelle Geschwindigkeit des Spielers an.",
@@ -87,37 +87,37 @@
 
   "enchantment.simplebuilding.deep_pockets": "Tiefe Taschen",
   "enchantment.simplebuilding.deep_pockets.description": "Erhöht die Kapazität von Bündeln.",
-  "enchantment.simplebuilding.master_builder": "Baumeister",
-  "enchantment.simplebuilding.master_builder.description": "Platziert Blöcke direkt aus dem Bündel.",
+  "enchantment.simplebuilding.master_builder": "Meisterbauer",
+  "enchantment.simplebuilding.master_builder.description": "Platziert Blöcke direkt aus deinem Bündel.",
   "enchantment.simplebuilding.funnel": "Trichter",
-  "enchantment.simplebuilding.funnel.description": "Leitet Items automatisch in das Bündel.",
+  "enchantment.simplebuilding.funnel.description": "Trichtert automatisch Gegenstände in dein Bündel.",
   "enchantment.simplebuilding.override": "Überschreiben",
-  "enchantment.simplebuilding.override.description": "Erlaubt das Abbauen von Blöcken, die normalerweise nicht vom Vorschlaghammer unterstützt werden.",
+  "enchantment.simplebuilding.override.description": "Erlaubt den Abbau von Blöcken, die normalerweise nicht vom Vorschlaghammer unterstützt werden.",
   "enchantment.simplebuilding.radius": "Radius",
-  "enchantment.simplebuilding.radius.description": "Erhöht den Wirkungsbereich für Vorschlaghämmer.",
-  "enchantment.simplebuilding.strip_miner": "Streifenminer",
+  "enchantment.simplebuilding.radius.description": "Erhöht den Wirkungsbereich von Vorschlaghämmern.",
+  "enchantment.simplebuilding.strip_miner": "Tunnelgräber",
   "enchantment.simplebuilding.strip_miner.description": "Gräbt einen Tunnel beim Schleichen.",
-  "enchantment.simplebuilding.vein_miner": "Adernminer",
-  "enchantment.simplebuilding.vein_miner.description": "Baut alle verbundenen Erze des gleichen Typs ab, wenn man schleicht.",
+  "enchantment.simplebuilding.vein_miner": "Ader-Abbau",
+  "enchantment.simplebuilding.vein_miner.description": "Baut alle verbundenen Erze des gleichen Typs beim Schleichen ab.",
   "enchantment.simplebuilding.kinetic_protection": "Kinetischer Schutz",
   "enchantment.simplebuilding.kinetic_protection.description": "Reduziert kinetischen Schaden.",
-  "enchantment.simplebuilding.cover": "Bedecken",
+  "enchantment.simplebuilding.cover": "Verkleidung",
   "enchantment.simplebuilding.cover.description": "Platziert Blöcke auf der Oberfläche, die du ansiehst.",
   "enchantment.simplebuilding.bridge": "Brücke",
   "enchantment.simplebuilding.bridge.description": "Platziert Blöcke vor dir.",
   "enchantment.simplebuilding.linear": "Linear",
   "enchantment.simplebuilding.linear.description": "Platziert Blöcke in einer geraden Linie beim Schleichen.",
   "enchantment.simplebuilding.drawer": "Schublade",
-  "enchantment.simplebuilding.drawer.description": "Erhöht die Lagerkapazität von Truhen und Bündeln, sperrt aber auf das spezifische Item.",
+  "enchantment.simplebuilding.drawer.description": "Erhöht die Lagerkapazität von Truhen und Bündeln, sperrt sie aber auf einen bestimmten Gegenstand.",
   "enchantment.simplebuilding.versatility": "Vielseitigkeit",
-  "enchantment.simplebuilding.versatility.description": "Wechselt beim Schleichen zum besten Werkzeug für den Job.",
+  "enchantment.simplebuilding.versatility.description": "Wechselt beim Schleichen zum besten Werkzeug für die Aufgabe.",
 
   "enchantment.simplebuilding.break_through": "Durchbruch",
-  "enchantment.simplebuilding.break_through.description": "Erlaubt dem Vorschlaghammer, eine zweite Schicht Blöcke zu brechen.",
+  "enchantment.simplebuilding.break_through.description": "Erlaubt dem Vorschlaghammer, eine zweite Schicht von Blöcken abzubauen.",
   "enchantment.simplebuilding.color_palette": "Farbpalette",
-  "enchantment.simplebuilding.color_palette.description": "Zufällige Blockplatzierung.",
-  "enchantment.simplebuilding.double_jump": "Doppelsprung",
-  "enchantment.simplebuilding.double_jump.description": "Erlaubt dem Spieler einen zusätzlichen Sprung.",
+  "enchantment.simplebuilding.color_palette.description": "Platziert Blöcke zufällig.",
+  "enchantment.simplebuilding.double_jump": "Luftsprung",
+  "enchantment.simplebuilding.double_jump.description": "Erlaubt dem Spieler einen zusätzlichen Sprung auszuführen.",
 
   "container.enchantments": "Verzauberungen",
   "enchantment.level.1": "I",
@@ -126,15 +126,15 @@
   "enchantment.level.4": "IV",
   "enchantment.level.5": "V",
 
-  "text.autoconfig.simplebuilding.option.tools": "Werkzeugeinstellungen",
-  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak": "Oktant Schleichen umkehren",
+  "text.autoconfig.simplebuilding.option.tools": "Werkzeug-Einstellungen",
+  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak": "Oktant-Schleichen umkehren",
   "text.autoconfig.simplebuilding.option.tools.invertOctantSneak.@Tooltip": "Wenn wahr, rendert der Oktant den gefüllten Bereich, wenn NICHT geschlichen wird (mit Berührung des Konstrukteurs).",
-  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity": "Baustab Hervorhebung Deckkraft",
-  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity.@Tooltip": "Deckkraft der Blockhervorhebung des Baustabs (0.0 - 1.0).",
+  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity": "Deckkraft der Baustab-Hervorhebung",
+  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity.@Tooltip": "Deckkraft der Block-Hervorhebung des Baustabs (0.0 - 1.0).",
 
   "text.autoconfig.simplebuilding.option.tools.enableToolAnimations": "Werkzeuganimationen aktivieren",
-  "text.autoconfig.simplebuilding.option.tools.enableToolAnimations.@Tooltip": "Schaltet benutzerdefinierte Werkzeuganimationen wie die Meißelrotation um.",
-  "text.autoconfig.simplebuilding.option.tools.enableChiselAnimation": "Meißelanimation aktivieren",
+  "text.autoconfig.simplebuilding.option.tools.enableToolAnimations.@Tooltip": "Schaltet benutzerdefinierte Werkzeuganimationen wie die Meißel-Rotation um.",
+  "text.autoconfig.simplebuilding.option.tools.enableChiselAnimation": "Meißel-Animation aktivieren",
   "text.autoconfig.simplebuilding.option.tools.enableChiselAnimation.@Tooltip": "Spezifischer Schalter für das visuelle Feedback des Meißels.",
 
   "text.autoconfig.simplebuilding.option.worldGen": "Weltgenerierung & Wirtschaft",
@@ -143,68 +143,52 @@
   "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades": "Fahrenden Händler aktivieren",
   "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades.@Tooltip": "Fügt Meißel- und Baustab-Handel zum Fahrenden Händler hinzu.",
   "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges": "Beutetruhen aktivieren",
-  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges.@Tooltip": "Fügt Items zu Verlies-/Strukturtruhen hinzu.",
+  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges.@Tooltip": "Fügt Gegenstände zu Verlies-/Strukturtruhen hinzu.",
 
-  "text.autoconfig.simplebuilding.option.enchantments": "Verzauberungs-Balancing",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide": "Schneller Ritt Einstellungen",
-
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier": "Ghast Geschwindigkeitsboost",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Glückliche Ghasts (Standard: 0.40).",
-
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier": "Pferd Geschwindigkeitsboost",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Pferde (Standard: 0.12).",
-
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier": "Andere Mobs Geschwindigkeitsboost",
-  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier.@Tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Schweine/Schreiter (Standard: 0.15).",
-
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump": "Pferdesprung Einstellungen",
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier": "Sprungstärke Boost",
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier.@Tooltip": "Sprungstärkenmultiplikator pro Verzauberungsstufe auf Pferderüstung (Standard: 0.20).",
-
-  "text.autoconfig.simplebuilding.option.tools.buildingHighlightOpacity": "Baustab Hervorhebung Deckkraft",
+  "text.autoconfig.simplebuilding.option.tools.buildingHighlightOpacity": "Deckkraft der Baustab-Hervorhebung",
 
   "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions": "Bündel-Interaktionen umkehren",
-  "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions.@Tooltip": "Wenn wahr, führt Schleichen beim Benutzen von Bündeln die entgegengesetzte Aktion aus (Einfügen vs Entnehmen).",
+  "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions.@Tooltip": "Wenn wahr, führt das Schleichen bei der Verwendung von Bündeln die entgegengesetzte Aktion aus (Einlagern vs. Entnehmen).",
 
-  "text.autoconfig.simplebuilding.option.enableDoubleJump": "Doppelsprung-Verzauberung aktivieren",
-  "text.autoconfig.simplebuilding.option.tools.enableDoubleJump.@Tooltip": "Schaltet die Doppelsprung-Verzauberungsfunktionalität um.",
+  "text.autoconfig.simplebuilding.option.enableDoubleJump": "Luftsprung-Verzauberung aktivieren",
+  "text.autoconfig.simplebuilding.option.tools.enableDoubleJump.@Tooltip": "Schaltet die Funktionalität der Luftsprung-Verzauberung um.",
 
   "block.simplebuilding.reinforced_chest": "Verstärkte Truhe",
   "item.simplebuilding.reinforced_chest": "Verstärkte Truhe",
-  "block.simplebuilding.netherite_chest": "Netherit-Truhe",
-  "item.simplebuilding.netherite_chest": "Netherit-Truhe",
+  "block.simplebuilding.netherite_chest": "Netherittruhe",
+  "item.simplebuilding.netherite_chest": "Netherittruhe",
 
   "block.simplebuilding.reinforced_hopper": "Verstärkter Trichter",
   "item.simplebuilding.reinforced_hopper": "Verstärkter Trichter",
-  "block.simplebuilding.netherite_hopper": "Netherit-Trichter",
-  "item.simplebuilding.netherite_hopper": "Netherit-Trichter",
+  "block.simplebuilding.netherite_hopper": "Netherittrichter",
+  "item.simplebuilding.netherite_hopper": "Netherittrichter",
 
   "block.simplebuilding.reinforced_piston": "Verstärkter Kolben",
   "item.simplebuilding.reinforced_piston": "Verstärkter Kolben",
-  "block.simplebuilding.netherite_piston": "Netherit-Kolben",
-  "item.simplebuilding.netherite_piston": "Netherit-Kolben",
+  "block.simplebuilding.netherite_piston": "Netheritkolben",
+  "item.simplebuilding.netherite_piston": "Netheritkolben",
   "tooltip.simplebuilding.netherite_piston": "Baut Blöcke basierend auf Redstone-Stärke (1-15) ab.",
 
   "block.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
   "container.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
   "item.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
-  "container.simplebuilding.netherite_blast_furnace": "Netherit-Schmelzofen",
-  "block.simplebuilding.netherite_blast_furnace": "Netherit-Schmelzofen",
-  "item.simplebuilding.netherite_blast_furnace": "Netherit-Schmelzofen",
+  "container.simplebuilding.netherite_blast_furnace": "Netheritschmelzofen",
+  "block.simplebuilding.netherite_blast_furnace": "Netheritschmelzofen",
+  "item.simplebuilding.netherite_blast_furnace": "Netheritschmelzofen",
 
   "block.simplebuilding.reinforced_furnace": "Verstärkter Ofen",
   "container.simplebuilding.reinforced_furnace": "Verstärkter Ofen",
   "item.simplebuilding.reinforced_furnace": "Verstärkter Ofen",
-  "container.simplebuilding.netherite_furnace": "Netherit-Ofen",
-  "block.simplebuilding.netherite_furnace": "Netherit-Ofen",
-  "item.simplebuilding.netherite_furnace": "Netherit-Ofen",
+  "container.simplebuilding.netherite_furnace": "Netheritofen",
+  "block.simplebuilding.netherite_furnace": "Netheritofen",
+  "item.simplebuilding.netherite_furnace": "Netheritofen",
 
   "block.simplebuilding.reinforced_smoker": "Verstärkter Räucherofen",
   "container.simplebuilding.reinforced_smoker": "Verstärkter Räucherofen",
   "item.simplebuilding.reinforced_smoker": "Verstärkter Räucherofen",
-  "container.simplebuilding.netherite_smoker": "Netherit-Räucherofen",
-  "block.simplebuilding.netherite_smoker": "Netherit-Räucherofen",
-  "item.simplebuilding.netherite_smoker": "Netherit-Räucherofen",
+  "container.simplebuilding.netherite_smoker": "Netheriträucherofen",
+  "block.simplebuilding.netherite_smoker": "Netheriträucherofen",
+  "item.simplebuilding.netherite_smoker": "Netheriträucherofen",
 
   "item.simplebuilding.construction_light": "Baulicht",
 
@@ -212,14 +196,28 @@
   "item.simplebuilding.cracked_diamond": "Rissiger Diamant",
   "item.simplebuilding.cracked_diamond_block": "Rissiger Diamantblock",
 
-  "simplebuilding.gui.title": "Octant Manager",
-  "simplebuilding.gui.locked": "§c[ GESPERRT ]",
-  "simplebuilding.gui.unlocked": "§a[ ENTSPERRT ]",
-  "simplebuilding.gui.pos1": "Startpunkt (Pos 1)",
-  "simplebuilding.gui.pos2": "Endpunkt (Pos 2)",
-  "simplebuilding.gui.size": "Größe (B x H x T)",
-  "simplebuilding.gui.shape": "Form: %s",
+  "simplebuilding.gui.title": "Oktant-Manager",
+  "simplebuilding.gui.locked": "§c\uD83D\uDD12",
+  "simplebuilding.gui.unlocked": "§a\uD83D\uDD13",
+  "simplebuilding.gui.pos1": "Start (1)",
+  "simplebuilding.gui.pos2": "Ende (2)",
+  "simplebuilding.gui.size": "Größe",
   "simplebuilding.gui.close": "Fertig",
-  "simplebuilding.gui.lock_tooltip": "Sperrt die Form, um versehentliches Klicken zu verhindern."
+  "simplebuilding.gui.shape": "Form: %s",
+  "simplebuilding.gui.orientation": "Achse: %s",
+  "simplebuilding.gui.hollow": "Hohl: %s",
+  "simplebuilding.gui.layer": "Ebenen-Modus: %s",
+  "simplebuilding.gui.order": "Reihenfolge: %s",
 
+  "simplebuilding.shape.cuboid": "Quader",
+  "simplebuilding.shape.cylinder": "Zylinder",
+  "simplebuilding.shape.sphere": "Kugel",
+  "simplebuilding.shape.pyramid": "Pyramide",
+  "simplebuilding.shape.triangle": "Prisma",
+  "simplebuilding.shape.rectangle": "Rechteck (2D)",
+  "simplebuilding.shape.ellipse": "Ellipse (2D)",
+
+  "simplebuilding.order.default": "Standard",
+  "simplebuilding.order.bottom_up": "Von unten nach oben",
+  "simplebuilding.order.top_down": "Von oben nach unten"
 }
